# cl_tools

./: README.md  clc2  new
clc-src/: TODO.md  parser.ml
doc/: CLC.md
src/: .gitignore  Makefile  TODO  TODO.md  dune  eval.ml  eval.mli  input.ml  input.mli  lexer.mli  lexer.mll  lexer_test.ml  lexer_utils.ml  lexer_utils.mli  loc.ml  loc.mli  main.ml  parser.ml  parser.mli  parser_test.ml  parser_utils.ml  parser_utils.mli  repl.ml  repl.mli  types.ml  types.mli
src/clc/: Makefile  NOTES.md  TODO.md  ast.ml  basis.ml  dune  eval.ml  ir.ml  ir2.ml  ir2.mli  lexer.mll  lexer_utils.mli  main.ml  parser.mly  parser_utils.ml  pprint.ml  pprint.mli  utils.ml
src/clc/examples/: 9_11.lc  9_12.lc  9_13_15.lc  9_7.lc  9_9.lc  bug.cl  test1.cl  tmam_9.cl  y.cl
src/clc/tests/: tmam_9_1.lc
src/clc2/: Makefile  NOTES.md  TODO.md  ast.ml  ast.mli  basis.ml  basis.mli  convert.ml  convert.mli  dune  eval.ml  eval.mli  ir.ml  ir.mli  ir2.ml  ir2.mli  lexer.mli  lexer.mll  main.ml  parser.mly  utils.ml  utils.mli
src/clc2/examples/: 9_10.lc  9_16.lc  9_2.lc  9_4.lc  9_5.lc  9_6.lc  9_8.lc  TMAM.tex  test1.cl  tmam_9.cl  tmam_9.lc
src/clc_OLD/: TODO.md  eval.ml  eval.mli
src/clx/: TODO.md
src/coq/: NOTES.md  TMAM_9.v  TODO.md
src/tests/: test.cl  test.clc  tmam.txt  tmam1.clc  tmam_9_1.clc  tmam_9_2.clc  tmam_9_2.lclc  tmam_9_3.lclc
