(library
  (name clclib)
  (modules
    types loc input
    lexer_utils lexer
    parser_utils parser repl
    eval)
  (modes byte))

(ocamllex lexer)

(executable
  (name lexer_test)
  (libraries clclib)
  (modules lexer_test)
  (modes byte))

(executable
  (name parser_test)
  (libraries clclib)
  (modules parser_test)
  (modes byte))

(executable
  (name main)
  (modules main)
  (libraries clclib)
  (modes byte) )

;; By default, dune treats warnings as errors.
;; This makes dune print warnings but not treat them as errors.
(env
  (dev
    (flags (:standard -warn-error -A))))
