(library
  (name clc2lib)
  (modules
    ast
    )
  (modes byte)
  )

;(ocamllex lexer)

;(executable
;  (name main)
;  (modules main)
;  (libraries clc2lib)
;  (modes byte) )

;; By default, dune treats warnings as errors.
;; This makes dune print warnings but not treat them as errors.
(env
  (dev
    (flags (:standard -warn-error -A))))
